<resources>
    <string name="app_name">RespectU</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Add_to_Playlist">Add to Playlist</string>
    <string name="SPEED_Recommendation">SPEED Recommendation</string>
    <string name="Search">Search</string>
    <string name="Sort">Sort</string>
    <string name="Asc">Asc</string>
    <string name="Desc">Desc</string>
    <string name="Remove">Remove</string>
    <string name="Current">Current</string>
    <string name="Change_BPM_Default">Change BPM Defaults</string>
    <string name="SPEED_Variation">(SPEED Variation)</string>
    <string name="Difficulty">Difficulty</string>
    <string name="Ask_To_Wind">Ask to Wind</string>
    <string name="Memory_of_Wind">Memory of Wind</string>
    <string name="HeartBeat">HeartBeat</string>
    <string name="Piano_Concerto_No.1">Piano Concerto No.1</string>
    <string name="Soar_Stay_With_Me">Soar ~Stay With Me~</string>
    <string name="Eternal_Memory">Eternal Memory</string>
    <string name="Taekwonburi">Taekwonburi</string>
    <string name="Every_Morning">Every Morning</string>
    <string name="Song">Song</string>
    <string name="Mission">Mission</string>
    <string name="Trophy">Trophy</string>
    <string name="Playlist">Playlist</string>
    <string name="More">More</string>
    <string name="Back">Back</string>
    <string name="Language">Language</string>
    <string name="Unlock_ACHIEVEMENT">Unlock (ACHIEVEMENT)</string>
    <string name="Unlock_Mission">Unlock (MISSION)</string>
    <string name="Type">Type</string>
    <string name="Title">TItle</string>
    <string name="Effector">Effector</string>
    <string name="Reward">Reward</string>
    <string name="Play_Count">Play Count</string>
    <string name="Player_Level">Player Level</string>
    <string name="ARCADE_Mode_Cleared">ARCADE Mode Cleared</string>
    <string name="Tunes_Cleared_4B">4B TUNES Cleared</string>
    <string name="Tunes_Cleared_5B">5B TUNES Cleared</string>
    <string name="Tunes_Cleared_6B">6B TUNES Cleared</string>
    <string name="Tunes_Cleared_8B">8B TUNES Cleared</string>
    <string name="Free_Style_Combo">FREE STYLE Combo</string>
    <string name="Mission_Cleared">MISSION Cleared</string>
    <string name="Total_Break">Total Break</string>
    <string name="Maximum_Max_Combo">Maximum MAX COMBO</string>
    <string name="S_Rank_Cleared">S RANK Cleared</string>
    <string name="A_Rank_Cleared">A RANK Cleared</string>
    <string name="Normal_Difficulty_Mode_Cleared">NORMAL Difficulty Mode Cleared</string>
    <string name="Hard_Difficulty_Mode_Cleared">HARD Difficulty Mode Cleared</string>
    <string name="Maximum_Difficulty_Mode_Cleared">MAXIMUM Difficulty Mode Cleared</string>
    <string name="X2_Fever_Activated">X2 FEVER Activated</string>
    <string name="X3_Fever_Activated">X3 FEVER Activated</string>
    <string name="X4_Fever_Activated">X4 FEVER Activated</string>
    <string name="X5_Fever_Activated">X5 FEVER Activated</string>
    <string name="Total_Score">Total Score</string>
    <string name="Online_Mode_Playcount">ONLINE Mode Playcount</string>
    <string name="Max_Combo_Cleared">MAX COMBO Cleared</string>
    <string name="BPM_Explanation">You can get SPEED Recommendation by touching Song list.</string>
    <string name="Setting">Setting</string>
    <string name="Announcement">Announcement</string>
    <string name="Application_Exit">Application Exit</string>
    <string name="GLHF">GLHF</string>
    <string name="Rhythm_Game_Maniac">Rhythm Game Maniac</string>
    <string name="Eager_Beaver">Eager Beaver</string>
    <string name="Always_On_Duty">Always On Duty</string>
    <string name="Tunes_4B_Love">4B TUNES Love</string>
    <string name="I_Love_Dogs">I Love Dogs!</string>
    <string name="Tunes_5B_Love">5B TUNES Love</string>
    <string name="Waiting_for_Weekend">Waiting for Weekend</string>
    <string name="Tunes_6B_Love">6B TUNES Love</string>
    <string name="NB_Ranger">NB RANGER</string>
    <string name="Tunes_8B_Love">8B TUNES Love</string>
    <string name="Sheepish">Sheepish</string>
    <string name="Fever_Free_Zone">FEVER Free Zone</string>
    <string name="Cant_Focus">Can\'t Focus</string>
    <string name="Lefty">Lefty</string>
    <string name="Novice_Here">Novice Here</string>
    <string name="High_Class">High Class</string>
    <string name="Hawk_Eye">Hawk Eye</string>
    <string name="HAXXOR">HAXXOR</string>
    <string name="Jack_Of_All_Trades">Jack Of All Trades</string>
    <string name="Come_At_Me">Come at Me</string>
    <string name="Unforgettable">Unforgettable</string>
    <string name="Most_Popular">Most Popular</string>
    <string name="I_Love_Cats">I Love Cats!</string>
    <string name="Clear_All_Songs">Clear All Songs!</string>
    <string name="I_Want_You">I Want You.</string>
    <string name="Holy_Land">Holy Land</string>
    <string name="Only_Study">Only Study</string>
    <string name="Most_Improved">Most Improved</string>
    <string name="Sprint">Sprint</string>
    <string name="Rhythm_Power">Rhythm Power</string>
    <string name="Shut_In">Shut In</string>
    <string name="Im_The_Boss">I\'m the Boss</string>
    <string name="DMP_Lover">DMP Lover</string>
    <string name="What_A_Bookworm">What a Bookworm</string>
    <string name="DMO_Lover">DMO Lover</string>
    <string name="Go_Easy_On_Me">Go Easy On Me.</string>
    <string name="Condition_Disorder">Condition Disorder</string>
    <string name="Cute">Cute</string>
    <string name="You_See_That">You See That?</string>
    <string name="Craving_Technika">Craving Technika</string>
    <string name="Yes_Sir">Yes Sir!</string>
    <string name="Hard_Worker">Hard Worker</string>
    <string name="Lets_Be_Friends">Let\'s Be Friends</string>
    <string name="Lurker">Lurker</string>
    <string name="DJMAX_Missionary">DJMAX Missionary</string>
    <string name="Test_Your_Might">Test your Might</string>
    <string name="Stud">Stud</string>
    <string name="Super_Rookie">Super Rookie</string>
    <string name="Entertainer">Entertainer</string>
    <string name="Night_Owl">Night Owl</string>
    <string name="Dont_Be_Careless">Don\'t Be Careless!</string>
    <string name="I_Hate_Fast_Songs">I Hate Fast Songs!</string>
    <string name="Diet_Starts_Tomorrow">Diet Starts Tomorrow</string>
    <string name="New_Type">New Type</string>
    <string name="Versatile">Versatile</string>
    <string name="Guru">Guru</string>
    <string name="Grandpa_Gamer">Grandpa Gamer</string>
    <string name="Left_Hand_Only">Left Hand Only</string>
    <string name="Classic_Game_Fanatic">Classic Game Fanatic</string>
    <string name="Doting_Father">Doting Father</string>
    <string name="Genius">Genius</string>
    <string name="Super_Master">Super Master</string>
    <string name="Born_To_Jam">Born to Jam</string>
    <string name="Proposed_Flower_Wolf">Proposed, Flower, Wolf</string>
    <string name="Come_to_Me">Come to me</string>
    <string name="To_You">To You</string>
    <string name="Forever">Forever</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_song_detail">Performance Record</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Performance">Performance</string>
    <string name="Rank">Rank</string>
    <string name="Accuracy">Accuracy</string>
    <string name="Note">Note</string>
    <string name="Lee_Geol">Lee Geol</string>
    <string name="My_Favorite_Button">My Favorite Button</string>
    <string name="None">None</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Skill_Point">Skill Point</string>
    <string name="Next">Next</string>
    <string name="Highest_Skill_Point">Highest Skill Point</string>
    <string name="_1st">1st</string>
    <string name="_50th">50th</string>
    <string name="Proposed_Flower_Wolf_part2">Proposed, Flower, Wolf part.2</string>
    <string name="Ask_To_Wind_Live">Ask to Wind ~Live Mix~</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
