<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.respect.presto.respectu.MissionDetailFragment">

    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="RESPECT FOR PLAYERS"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:id="@+id/linearlayoutCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/labelTitle"
        android:layout_marginTop="30dp"
        android:gravity="center">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="SCORE"
            android:textSize="11sp"
            android:textColor="#bdbdbd"
            android:gravity="center"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="FEVER"
            android:textSize="11sp"
            android:textColor="#bdbdbd"
            android:layout_marginLeft="10dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="COMBO"
            android:textSize="11sp"
            android:textColor="#bdbdbd"
            android:layout_marginLeft="10dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="RATE"
            android:textSize="11sp"
            android:textColor="#bdbdbd"
            android:layout_marginLeft="10dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="BREAK"
            android:textSize="11sp"
            android:textColor="#bdbdbd"
            android:layout_marginLeft="10dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayoutConditionValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayoutCondition"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
            android:id="@+id/labelScoreLimit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="2000000"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelFeverLimit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="X5"
            android:textSize="13sp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelComboLimit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="10000"
            android:textSize="13sp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelRateLimit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="100%"
            android:textSize="13sp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelBreakLimit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="30"
            android:textSize="13sp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayoutList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayoutConditionValue"
        android:layout_marginTop="40dp"
        android:gravity="center">
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/Type"
            android:textAllCaps="true"
            android:textSize="11sp"
            android:textColor="#bdbdbd"
            android:gravity="center"/>
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/Difficulty"
            android:textAllCaps="true"
            android:textSize="11sp"
            android:textColor="#bdbdbd"
            android:gravity="center"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textAllCaps="true"
            android:textSize="11sp"
            android:textColor="#bdbdbd"
            android:gravity="center"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="10sp"
            android:textColor="#ffffff"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayoutList1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayoutList"
        android:layout_marginTop="15dp"
        android:gravity="center">
        <TextView
            android:id="@+id/labelSong1key"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="XB"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelSong1level"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="MAXIMUM"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelSong1title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="We're All Gonna Die"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="start"/>
        <TextView
            android:id="@+id/labelSong1button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/More"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textColor="#3333ff"
            android:gravity="left"
            android:visibility="invisible"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayoutList2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayoutList1"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
            android:id="@+id/labelSong2key"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="XB"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelSong2level"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="MAXIMUM"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelSong2title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="We're All Gonna Die"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="start"/>
        <TextView
            android:id="@+id/labelSong2button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/More"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textColor="#3333ff"
            android:gravity="left"
            android:visibility="invisible"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayoutList3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayoutList2"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
            android:id="@+id/labelSong3key"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="XB"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelSong3level"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="MAXIMUM"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelSong3title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="We're All Gonna Die"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="start"/>
        <TextView
            android:id="@+id/labelSong3button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/More"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textColor="#3333ff"
            android:gravity="left"
            android:visibility="invisible"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayoutList4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayoutList3"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
            android:id="@+id/labelSong4key"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="XB"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelSong4level"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="MAXIMUM"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelSong4title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="We're All Gonna Die"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="start"/>
        <TextView
            android:id="@+id/labelSong4button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/More"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textColor="#3333ff"
            android:gravity="left"
            android:visibility="invisible"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayoutList5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayoutList4"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
            android:id="@+id/labelSong5key"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="XB"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelSong5level"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="MAXIMUM"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelSong5title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="We're All Gonna Die"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="start"/>
        <TextView
            android:id="@+id/labelSong5button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/More"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textColor="#3333ff"
            android:gravity="left"
            android:visibility="invisible"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayoutList6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayoutList5"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
            android:id="@+id/labelSong6key"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="XB"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelSong6level"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="MAXIMUM"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/labelSong6title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="We're All Gonna Die"
            android:textSize="13sp"
            android:textColor="#000000"
            android:gravity="start"/>
        <TextView
            android:id="@+id/labelSong6button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/More"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textColor="#3333ff"
            android:gravity="left"
            android:visibility="invisible"/>
    </LinearLayout>
    <TextView
        android:id="@+id/effector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayoutList6"
        android:layout_marginTop="30dp"
        android:textAllCaps="true"
        android:text="@string/Effector"
        android:textSize="11sp"
        android:textColor="#bdbdbd"
        android:gravity="center"/>
    <TextView
        android:id="@+id/labelEffector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/effector"
        android:text="Fever-Manual / FOG / CHAOS W"
        android:textSize="13sp"
        android:textColor="#000000"
        android:gravity="center"/>
    <TextView
        android:id="@+id/reward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelEffector"
        android:layout_marginTop="20dp"
        android:text="@string/Reward"
        android:textAllCaps="true"
        android:textColor="#bdbdbd"
        android:textSize="11sp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/labelReward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reward"
        android:text="Trophy : DJ Alpha Resigns"
        android:textSize="13sp"
        android:textColor="#000000"
        android:gravity="center"/>



</RelativeLayout>
